--- a/style.css
+++ b/style.css
@@ -1,4 +1,93 @@
 html, body{
+  font-family: 'Poppins';
   margin: 0;
   padding: 0;
+}
+
+.main {
+  height: 100vh;
+}
+
+.nav {
+  position: fixed;
+  color: #f9f9f9;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#name {
+  font-size: 26px;
+  font-weight: 200;
+}
+
+.nav a {
+  color: #f9f9f9;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.content {
+  background-image: url('assets/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  color: #f9f9f9;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.content h1 {
+  margin: 0;
+  margin-top: -100px;
+  font-weight: 100;
+  font-size: 80px;
+}
+
+.content h2 {
+  margin-top: 10px;
+  font-weight: 200;
+  font-size: 26px;
+}
+
+@media only screen and (max-width: 800px) {
+  .line {
+    background-color: #fff;
+    width: 30px;
+    height: 2px;
+    margin-top: 10px;
+    transition: all 0.15s ease-in-out;
+  }
+  .menu-button {
+    right: 20px;
+    margin-top:15px;
+    padding-bottom: 10px;
+    position: fixed;
+    z-index: 1;
+  }
+  .nav {
+    display: flex;
+    background-color: rgba(60, 56, 66, 0.8);
+    height: 250px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    transform: translateY(-100%);
+    transition: all 0.4s ease-in-out;
+  }
+  .content h1 {
+    font-size: 10vw;
+
+  }
+  .content h2 {
+    margin-top: 0px;
+    font-size: 3vw;
+  }
+
 }
