--- a/style.css
+++ b/style.css
@@ -64,6 +64,19 @@ html, body{
     height: 2px;
     margin-top: 10px;
     transition: all 0.15s ease-in-out;
+    -webkit-transition: all 0.15s ease-in-out;
+  }
+  .line.animate-top {
+    transform: rotate(46deg) translate(5px, 5px);
+    -webkit-transform: rotate(46deg) translate(5px, 5px);
+  }
+  .line.animate-bottom {
+    transform: rotate(-45deg) translate(3px, -4px);
+    -webkit-transform: rotate(-45deg) translate(3px, -4px);
+  }
+  .line.reset {
+    transform: rotate(0deg) translate(0, 0);
+    -webkit-transform: rotate(0deg) translate(0, 0);
   }
   .menu-button {
     right: 20px;
@@ -80,6 +93,16 @@ html, body{
     justify-content: space-evenly;
     transform: translateY(-100%);
     transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+
+  }
+  .nav.animate {
+    transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+  }
+  .nav.hide {
+    transition: none;
+    -webkit-transition: none;
   }
   .content h1 {
     font-size: 10vw;
