--- a/style.css
+++ b/style.css
@@ -5,13 +5,24 @@ html, body{
 }
 
 .main {
-  height: 100vh;
+  background-image: url('assets/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
 }
 
 .nav {
+  background-image: url('assets/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
   position: fixed;
   color: #f9f9f9;
-  width: 100%;
+  width: 100vw;
   height: 80px;
   display: flex;
   justify-content: space-around;
@@ -30,13 +41,9 @@ html, body{
   font-size: 18px;
 }
 
-.content {
-  background-image: url('assets/bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top center;
+.home-content {
   color: #f9f9f9;
-  height: inherit;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,20 +51,103 @@ html, body{
   text-align: center;
 }
 
-.content h1 {
+.home-content h1 {
   margin: 0;
   margin-top: -100px;
   font-weight: 100;
   font-size: 80px;
 }
 
-.content h2 {
+.home-content h2 {
   margin-top: 10px;
   font-weight: 200;
   font-size: 26px;
 }
 
-@media only screen and (max-width: 800px) {
+.about-content {
+  background-color: #f9f9f9;
+  margin-top: 80px;
+  height: auto;
+  min-height: 100vh;
+  padding-bottom: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+.about-content-area {
+  box-shadow: 0px 0px 10px 5px rgba(100, 100, 100, 0.1);
+  background-color: #f9f9f9;
+  margin-top: 100px;
+  height: auto;
+  width: 80%;
+  max-width: 1500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-text {
+  padding-bottom: 100px;
+  width: 80%;
+  margin-top: 80px;
+}
+
+.about-text h1 {
+  margin-top: 0;
+  font-weight: 500;
+  font-size: 50px;
+}
+
+#bio {
+  max-width: 700px;
+}
+
+.about-text p {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.about-text h2 {
+  font-weight: 500;
+  font-size: 40px;
+}
+
+.about-text h3 {
+  margin-top: 40px;
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.about-text h4 {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  font-weight: 200;
+  font-size: 20px;
+  font-style: italic;
+}
+
+.line-break {
+  margin-top: 50px;
+  background-color: rgba(200,200,200,1);
+  width: 100%;
+  height: 2px;
+}
+
+.about-intro {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.about-intro img {
+  margin-left: 150px;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+}
+
+@media only screen and (max-width: 1200px) {
   .line {
     background-color: #fff;
     width: 30px;
@@ -78,14 +168,27 @@ html, body{
     transform: rotate(0deg) translate(0, 0);
     -webkit-transform: rotate(0deg) translate(0, 0);
   }
+  .mobile-header {
+    background-image: url('assets/bg.jpg');
+    background-size: 1920 1080;
+    background-repeat: no-repeat;
+    background-position: top center;
+    position: fixed;
+    height: 80px;
+    width:100%;
+    background-color: coral;
+  }
   .menu-button {
+    cursor: pointer;
     right: 20px;
-    margin-top:15px;
+    margin-top:20px;
     padding-bottom: 10px;
     position: fixed;
     z-index: 1;
   }
   .nav {
+    background-image: none;
+    color: #f9f9f9;
     display: flex;
     background-color: rgba(60, 56, 66, 0.8);
     height: 250px;
@@ -94,7 +197,6 @@ html, body{
     transform: translateY(-100%);
     transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
-
   }
   .nav.animate {
     transform: translate(0, 0);
@@ -104,13 +206,23 @@ html, body{
     transition: none;
     -webkit-transition: none;
   }
-  .content h1 {
-    font-size: 10vw;
-
+  #name {
+    margin-top: 4px;
   }
-  .content h2 {
+  .home-content h1 {
+    font-size: 10vw;
+  }
+  .home-content h2 {
     margin-top: 0px;
     font-size: 3vw;
+  }
+
+  .about-intro {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-intro img {
+    margin-left: 0px;
   }
 
 }
