--- a/style.css
+++ b/style.css
@@ -223,6 +223,26 @@ html, body{
   }
   .about-intro img {
     margin-left: 0px;
+    width: 200px;
+    height: 200px;
   }
-
+  .about-text {
+    margin-top: 20px;
+  }
+  .about-text h1 {
+    margin-bottom: 0px;
+    font-size: 35px;
+  }
+  .about-text h2 {
+    font-size: 30px;
+  }
+  .about-text h3 {
+    font-size: 18px;
+  }
+  .about-text h4 {
+    font-size: 18px;
+  }
+  .about-text p {
+    font-size: 16px;
+  }
 }
