--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html, body{
   color: #f9f9f9;
   width: 100vw;
   height: 80px;
+  z-index: 1;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -64,7 +65,7 @@ html, body{
   font-size: 26px;
 }
 
-.about-content {
+.content {
   background-color: #f9f9f9;
   margin-top: 80px;
   height: auto;
@@ -74,7 +75,7 @@ html, body{
   justify-content: center;
 }
 
-.about-content-area {
+.content-area {
   box-shadow: 0px 0px 10px 5px rgba(100, 100, 100, 0.1);
   background-color: #f9f9f9;
   margin-top: 100px;
@@ -86,14 +87,14 @@ html, body{
   align-items: center;
 }
 
-.about-text {
+.text {
   padding-bottom: 100px;
   width: 80%;
   margin-top: 80px;
 }
 
-.about-text h1 {
-  margin-top: 0;
+.text h1 {
+  margin-top: 15px;
   font-weight: 500;
   font-size: 50px;
 }
@@ -102,29 +103,33 @@ html, body{
   max-width: 700px;
 }
 
-.about-text p {
+.text p {
   font-weight: 400;
   font-size: 18px;
 }
 
-.about-text h2 {
+.text h2 {
   font-weight: 500;
   font-size: 40px;
 }
 
-.about-text h3 {
+.text h3 {
   margin-top: 40px;
   margin-bottom: 0;
   font-weight: 500;
   font-size: 24px;
 }
 
-.about-text h4 {
+.text h4 {
   margin-top: 0px;
   margin-bottom: 5px;
   font-weight: 200;
   font-size: 20px;
   font-style: italic;
+}
+
+.text li {
+  font-size: 18px;
 }
 
 .line-break {
@@ -134,17 +139,137 @@ html, body{
   height: 2px;
 }
 
-.about-intro {
+.intro {
   display: flex;
   justify-content: space-between;
   align-content: center;
 }
 
-.about-intro img {
+.intro img {
   margin-left: 150px;
   width: 350px;
   height: 350px;
   border-radius: 50%;
+}
+
+.text a{
+  color: black;
+}
+
+.project-block h3 {
+  font-size: 28px;
+}
+
+.block-content {
+  margin-top: 30px;
+  display: flex;
+}
+.block-content iframe {
+  flex-shrink: 0;
+}
+.block-content img {
+  border-radius: 10px;
+}
+
+.block-content p {
+  margin-top: 0;
+}
+
+.block-text {
+  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.source-button {
+  text-decoration: none;
+  color: #636363;
+  background-color: #B6EAF2;
+  width: 150px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.social-icons img {
+  width: 30px;
+  padding-right: 15px;
+}
+
+.social-icons a {
+  width: 300px;
+  padding-top: 15px;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: column;
+}
+
+.pg-header {
+  margin-top: 50px;
+  height: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pg-header p {
+  text-align: center;
+  font-size: 18px;
+}
+
+.pg-content {
+  background-color: #f9f9f9;
+  margin-top: 80px;
+  height: auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pg-content h1 {
+  margin-top: 15px;
+  font-weight: 500;
+  font-size: 50px;
+}
+
+.pg-gallery {
+  max-width: 1920px;
+  margin: 2px;
+  background-color: #f9f9f9;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.pg-gallery::after {
+  content: '';
+  flex-grow: 999999999;
+}
+
+.thumbs {
+  margin: 2px;
+  flex-grow: 1;
+  height: 300px;
+  position: relative;
+}
+
+.pg-gallery img {
+  height: 300px;
+  object-fit: cover;
+  max-width: 100%;
+  min-width: 100%;
+  vertical-align: bottom;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -177,6 +302,7 @@ html, body{
     height: 80px;
     width:100%;
     background-color: coral;
+    z-index: 1;
   }
   .menu-button {
     cursor: pointer;
@@ -184,7 +310,7 @@ html, body{
     margin-top:20px;
     padding-bottom: 10px;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
   }
   .nav {
     background-image: none;
@@ -192,6 +318,7 @@ html, body{
     display: flex;
     background-color: rgba(60, 56, 66, 0.8);
     height: 250px;
+    z-index: 1;
     flex-direction: column;
     justify-content: space-evenly;
     transform: translateY(-100%);
@@ -217,32 +344,75 @@ html, body{
     font-size: 3vw;
   }
 
-  .about-intro {
+  .intro {
     flex-direction: column;
     align-items: center;
   }
-  .about-intro img {
+  .intro img {
+    margin-top: 15px;
     margin-left: 0px;
     width: 200px;
     height: 200px;
   }
-  .about-text {
+  .text {
     margin-top: 20px;
   }
-  .about-text h1 {
+  .text h1 {
+    margin-top: 15px;
     margin-bottom: 0px;
-    font-size: 35px;
+    font-size: 2em;
   }
-  .about-text h2 {
-    font-size: 30px;
+  .text h2 {
+    font-size: 2em;
   }
-  .about-text h3 {
-    font-size: 18px;
+  .text h3 {
+    font-size: 1.5em;
   }
-  .about-text h4 {
-    font-size: 18px;
+  .text h4 {
+    font-size: 1.2em;
   }
-  .about-text p {
-    font-size: 16px;
+  .text p {
+    font-size: 1em;
+  }
+  .block-content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+  .block-text {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+  .block-content iframe {
+    flex-shrink: 0;
+    max-width: 400px;
+    width: 90%;
+    height: 225px;
+  }
+  .block-content img {
+    max-width: 400px;
+    width: 90%;
+    height: auto;
+    border-radius: 10px;
+  }
+  .project-block {
+    text-align: center;
+  }
+  .pg-header {
+    width: 90%;
+  }
+  .pg-header h1 {
+    font-size: 2em;
+  }
+  .pg-header p {
+    font-size: 1em;
+  }
+  .thumbs {
+    height: 150px;
+  }
+  .pg-gallery img {
+
+    height: 150px;
   }
 }
