--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ html, body{
   padding: 0;
 }
 
+#particles-js {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+
 .main {
   background-image: url('assets/bg.jpg');
   background-size: cover;
