--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ html, body{
   text-decoration: none;
   font-weight: 500;
   font-size: 18px;
+  transition: 0.2s;
+}
+
+.nav a:hover {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .home-content {
@@ -85,6 +90,11 @@ html, body{
 
 .home-social-icons img {
   width: 20px;
+  transition: 0.2s;
+}
+
+.home-social-icons img:hover {
+  filter: drop-shadow(0px 0px 5px #3D3D3D);
 }
 
 .content {
