--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body{
 }
 
 .main {
-  background-image: url('assets/bg.jpg');
+  background-image: url('assets/bg3.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -23,7 +23,7 @@ html, body{
 }
 
 .nav {
-  background-image: url('assets/bg.jpg');
+  background-image: url('assets/bg3.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
