--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ html, body{
 100% { transform: rotate( 0.0deg) }
 }
 
-@media only screen and (max-width: 570px) {
+@media only screen and (max-width: 480px) {
   .line {
     background-color: #fff;
     width: 30px;
@@ -413,11 +413,15 @@ html, body{
     margin-top: 4px;
   }
   .home-content h1 {
-    font-size: 10vw;
+    font-size: 14vw;
   }
   .home-content h2 {
     margin-top: 0px;
-    font-size: 3vw;
+    font-size: 4vw;
+  }
+
+  .line-break-small {
+    margin-top: 20px;
   }
 
   .intro {
@@ -439,16 +443,16 @@ html, body{
     font-size: 2em;
   }
   .text h2 {
-    font-size: 2em;
-  }
-  .text h3 {
     font-size: 1.5em;
   }
-  .text h4 {
+  .text h3 {
     font-size: 1.2em;
   }
+  .text h4 {
+    font-size: 1em;
+  }
   .text p {
-    font-size: 0.9rem;
+    font-size: 0.9em;
   }
   .block-content {
     flex-direction: column;
